# pfman

./: .gitignore  Cargo.toml  README.md
src/: kube_config.rs  main.rs  models.rs  process.rs  ssh_config.rs  storage.rs
src/ui/: dashboard.rs  logs_viewer.rs  mod.rs  session_form.rs
