[package]
name = "pfman"
version = "0.1.0"
description = "Port-Forwarding Manager"
authors = ["Tien Nguyen <neitomic@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.32"
uuid = { version = "1.11", features = ["v4", "serde"] }
serde_yaml = "0.9"
